--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,5 @@
 @import url(cores.css);
+@import url(waves.css);
 
 .cta-button {
     border: none;
@@ -15,7 +16,7 @@
     justify-content: center;
     align-items: center;
 
-    padding: clamp(8px, calc(0.33rem + 0.56vw), 1rem);
+    padding: calc(0.33rem + 0.56vw);
 
     text-decoration: none;
 
@@ -74,7 +75,7 @@
     
     width: 100%;
 
-    padding: 10px 10%;
+    padding: 10px 15%;
 
     transition: background 0.3s ease-in-out;
 }
@@ -137,6 +138,7 @@
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    padding: 0 15%;
 }
 
 .hero-bg {
@@ -154,16 +156,15 @@
     height: 100%;
     gap: clamp(16px, calc(1.05rem + 1vw), 48px);
 
-    padding: 0 0 0 100px;
-
     color: var(--text-light);
 }
 .title{
-    font-size: calc(1.05rem + 1.74vw);
+    font-size: calc(0.95rem + 1.56vw);
+    font-weight: 800;
 }
 .subtitle{
     font-size: calc(0.5rem + 0.84vw);
-    font-weight: 500;
+    font-weight: 600;
 }
 
 .hero-image-container {
@@ -174,42 +175,251 @@
     height: 100%;
     animation: floating 2s ease-in-out infinite alternate;
     & img {
-        width: 100%;
-        height: 100%;
-        max-height: calc(15.62rem + 26.05vw);;
-        max-width: calc(15.62rem + 26.05vw);;
-        object-fit: cover;
+        height: auto;
+        width: calc(10.42rem + 17.36vw);
     }
 }
 
 #about {
     width: 100%;
-    height: 100vh;
+    height: auto;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+    padding: 15vh 15%;
 }
 
-.about-image {
+.image-section{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 50%;
     height: 100%;
+    animation: floating 2s ease-in-out infinite alternate;
+
+    & > img {
+        width: 150px;
+        height: auto;
+    }
 }
 
-.wrapper-about {
+.wrapper {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: end;
+
     width: 50%;
     height: 100%;
     gap: clamp(16px, calc(1.05rem + 1vw), 48px);
 
-    padding: 0 100px 0 0;
-
     color: var(--color-items-primary);
 
+
+    & .subtitle {
+        color: var(--color-dark);
+    }
+}
+
+.wrapper-about {
+    align-items: end;
     text-align: right;
 }
+
+#foco {
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15vh 15%;
+}
+
+.wrapper-foco {
+    align-items: normal;
+    text-align: left;
+}
+
+#rotina {
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15vh 15%;
+}
+
+.wrapper-rotina {
+    align-items: end;
+    text-align: right;
+}
+
+#lembretes {
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15vh 15%;
+}
+
+.wrapper-lembretes {
+    align-items: normal;
+    text-align: left;
+}
+
+#pontos {
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15vh 15%;
+}
+
+.wrapper-pontos {
+    align-items: end;
+    text-align: right;
+}
+
+#distracao {
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15vh 15%;
+}
+
+.wrapper-distracao {
+    align-items: normal;
+    text-align: left;
+}
+
+/* ********************************************* */
+.waves {
+    position: relative;
+    margin-top: 25vh;
+}
+
+.wave {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background-image: url(../imgs/wave_red.png);
+    z-index: 100;
+}
+/* ******************************************** */
+#functions {
+    width: 100%;
+    height: auto;
+    padding: 15vh 15%;
+    position: relative;
+    background: var(--color-items-primary);
+    color: var(--text-light);
+}
+
+#functions .title {
+    text-align: center;
+}
+
+.cards-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2rem;
+}
+
+.card {
+    background: var(--bg-primary);
+    border-radius: 1rem;
+    padding: 2rem;
+    width: 400px;
+    height: 500px;
+ 
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+
+    color: var(--color-dark);
+    font-size: calc(0.83rem + 0.35vw);
+
+    border-bottom: 5px solid transparent;
+
+    overflow: hidden;
+    
+    &:hover {
+        border-radius: 0;
+        border-bottom: 5px solid var(--color-dark);
+    }
+}
+
+.card-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    width: 100%;
+    height: 100%;
+}
+
+.text-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+}
+
+.card img {
+    width: 100px;
+    height: auto;
+    margin-bottom: 1rem;
+}
+
+.card p {
+    font-size: calc(0.67rem + 0.28vw);
+    font-weight: 600;
+    color: var(--color-items-second);
+}
+
+.card-content .cta-button {
+    cursor: pointer;
+    &:before {
+        content: "Ler Mais";
+    }
+}
+
+.swiper-pagination-bullet-active {
+    background: var(--color-items-second) !important;
+}
+
+/* ***************************************** */
+.section-divider {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    background-size: 1000px 100px;
+    background: url(../imgs/layered-steps-haikei.svg);
+}
+
+#classes {
+    width: 100%;
+    height: auto;
+    padding: 15vh 15%;
+    position: relative;
+    background: var(--color-items-second);
+    color: var(--text-light);
+}
+
 
 @keyframes floating {
     0% {
