--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -9,7 +9,7 @@
   </head>
   <body class="bg-gray-100 text-gray-800 p-10">
     <div class="w-30 h-10 bg-teal-400"></div>
-    <h1 class="text-4xl font-bold text-clifford font-pixel">Vamos, Sport!</h1>
+    <h1 class="text-4xl font-bold text-clifford font-pixel">Bem vindo, <%= username %>!</h1>
     <p class="mt-4">Testando Tailwind direto no navegador 🧪</p>
     <button class="mt-4 px-4 py-2 bg-clifford text-white rounded hover:bg-blue-700 transition">
       Clica em mim
