--- a/project/public/styles/calendar.css
+++ b/project/public/styles/calendar.css
@@ -39,11 +39,32 @@
     background-color: var(--bg-second);
 }
 
-.fc .fc-scroller-liquid-absolute {
-    /* overflow-y: clip !important; */
+body {
+    display: flex;
 }
 
 #calendar {
     max-width: 1000px;
     margin: 0 auto;
+}
+
+.sidebar-container {
+    position: sticky;
+    top: 0;
+    left: 0;
+    width: 225px;
+    height: 100vh;
+    display: inline-block;
+    background: linear-gradient(180deg, var(--color-items-primary), var(--color-items-second));
+}
+
+.sidebar {
+    width: 100%;
+    height: 100%;
+    margin: auto;
+}
+
+.logo-container img{
+    max-height: 50px;
+    height: 100%;
 }
