--- a/project/public/styles/calendar.css
+++ b/project/public/styles/calendar.css
@@ -35,36 +35,290 @@
     --fc-now-indicator-color: red;
 }
 
-.fc .fc-daygrid-day.fc-day-today {
-    background-color: var(--bg-second);
-}
 
-body {
-    display: flex;
-}
-
-#calendar {
-    max-width: 1000px;
-    margin: 0 auto;
-}
 
 .sidebar-container {
     position: sticky;
     top: 0;
     left: 0;
-    width: 225px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 100vh;
     display: inline-block;
     background: linear-gradient(180deg, var(--color-items-primary), var(--color-items-second));
 }
 
 .sidebar {
-    width: 100%;
-    height: 100%;
-    margin: auto;
+    margin: 2rem 1.2rem;
 }
 
 .logo-container img{
-    max-height: 50px;
+    max-height: 40px;
     height: 100%;
+}
+
+.navbar-links {
+    margin: 3rem 0;
+    display: flex;
+    flex-direction: column;
+    text-decoration: none;
+    list-style: none;
+}
+.divider {
+    border-bottom: 1px rgba(255, 255, 255, 0.25) solid
+}
+.navbar-links li{
+    width: 250px;
+    padding: 15px;
+    border-radius: 10px;
+    
+    font-size: 1.2rem;
+    color: var(--text-light);
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    & > i {
+        width: 20px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+}
+.navbar .navbar-links li:nth-child(2){
+    background-color: var(--accent);
+}
+
+body {
+    display: flex;
+}
+
+.material-symbols-rounded {
+    font-variation-settings:
+    'FILL' 1,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 24
+}
+
+.site-container {
+    width: 100%;
+    height: auto;
+    background: #f5f3f0;
+}
+
+.header {
+    display: flex;
+    flex-direction: column;
+    padding: 3rem;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.first-header {
+    display: flex;
+    justify-content: space-between;
+
+    width: 100%;
+}
+
+.section-info h3 {
+    font-size: 19px;
+    line-height: 5px;
+    font-weight: 400;
+}
+.section-info h1 {
+    font-size: 3rem;
+    font-weight: 900;
+}
+
+.profile-container {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.profile-container .container {
+    display: flex;
+    gap: 5px;
+    align-items: center;
+    font-weight: 800;
+    & span {
+        color: var(--accent);
+    }
+}
+
+.progress-bar-xp {
+    overflow: hidden;
+    width: 100px;
+    height: 5px;
+    background: var(--color-dark);
+    border-radius: 5px;
+}
+.progress-fill-xp {
+    width: 60%;
+    height: 5px;
+    background: var(--color-items-primary);
+}
+
+.profile-container .profile {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    overflow: hidden;
+    border: 2px var(--color-items-primary) solid;
+    & img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+}
+
+.art-section {
+    position: relative;
+    width: 100%;
+    height: 350px;
+    border-radius: 20px;
+    overflow: hidden;
+    margin: 2rem 0;
+}
+
+.art-section .image {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    & img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
+    }
+    &:before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.25);
+    }
+}
+
+.art-content {
+    position: absolute;
+    top: 50%;
+    left: 60px;
+    transform: translateY(-50%);
+    color: var(--text-light);
+    z-index: 1;
+    & .texts {
+        margin-bottom: 20px;
+        & h2 {
+            font-size: 2.8rem;
+            font-weight: 900;
+        }
+        & p {
+            font-size: .9rem;
+            font-weight: 500;
+        }
+    }
+}
+
+.cta-button {
+    cursor: pointer;
+    border: none;
+    width: fit-content;
+
+    background: linear-gradient(180deg, var(--color-items-primary), var(--color-items-second));
+    
+    border-radius: 0.5rem;
+    z-index: 1;
+    position: relative;
+    overflow: hidden;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    padding: 12px;
+
+    text-decoration: none;
+
+    &:before {
+        content: "CRIAR ROTINA";
+        white-space: nowrap;
+        text-align: center;
+        color: var(--text-light);
+        font-family: "Nunito", sans-serif;
+        font-size: 18px;
+        font-weight: 800;
+    }
+
+    &:after{
+        content: "";
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        height: 0%;
+        background: var(--accent);
+        z-index: -1;
+        transition: 300ms ease;
+        border-radius: .5rem;
+    }
+
+    &:hover {
+        &:after{
+            height: 100%;
+        }
+    }
+}
+
+.fc .fc-daygrid-day.fc-day-today {
+    background-color: var(--bg-primary);
+}
+
+#calendar {
+    max-width: 90%;
+    margin: 0 auto;
+    padding: 2rem;
+}
+
+.fc-theme-standard td, .fc-theme-standard th, .fc-theme-standard .fc-scrollgrid {
+    border: transparent;
+}
+
+.fc {
+    border-radius: 20px;
+    background: var(--bg-primary);
+    box-shadow: 2px 10px 30px rgba(0, 0, 0, 0.2);
+}
+
+.fc .fc-timegrid-slot-label-cushion {
+    font-size: 1rem;
+    font-weight: 800;
+    &:after{
+        content: "h00";
+    }
+}
+
+.fc .fc-scroller-liquid-absolute::-webkit-scrollbar {
+    width: 7px;
+}
+
+.fc .fc-scroller-liquid-absolute::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+.fc .fc-scroller-liquid-absolute::-webkit-scrollbar-thumb {
+    background: var(--bg-second);
+    border-radius: 5px;
+}
+
+.fc-scroller-harness .fc-scroller {
+    overflow: hidden !important;
+}
+
+.fc .fc-scroller-liquid-absolute {
+    overflow: hidden scroll !important;
 }
