--- a/project/public/styles/calendar.css
+++ b/project/public/styles/calendar.css
@@ -31,7 +31,7 @@
     --fc-bg-event-color: rgb(143, 223, 130);
     --fc-bg-event-opacity: 0.3;
     --fc-highlight-color: rgba(188, 232, 241, 0.3);
-    --fc-today-bg-color: rgba(255, 220, 40, 0.15);
+    --fc-today-bg-color: rgba(255, 40, 87, 0.15);
     --fc-now-indicator-color: red;
 }
 
@@ -180,7 +180,7 @@ body {
     height: 350px;
     border-radius: 20px;
     overflow: hidden;
-    margin: 2rem 0;
+    margin: 1.4rem 0;
 }
 
 .art-section .image {
@@ -278,9 +278,19 @@ body {
     background-color: var(--bg-primary);
 }
 
+.container-calendar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: var(--bg-primary);
+    margin: 3rem;
+    box-shadow: 2px 10px 30px rgba(0, 0, 0, 0.2);
+    border-radius: 25px;
+    padding: 3rem;
+}
+
 #calendar {
-    max-width: 90%;
-    margin: 0 auto;
+    min-width: 800px;
     padding: 2rem;
 }
 
@@ -288,15 +298,19 @@ body {
     border: transparent;
 }
 
+.fc-col-header {
+    border: 2px solid var(--color-items-primary)
+} 
+
 .fc {
     border-radius: 20px;
-    background: var(--bg-primary);
-    box-shadow: 2px 10px 30px rgba(0, 0, 0, 0.2);
+    box-shadow: 2px 5px 20px rgba(0, 0, 0, 0.2);
 }
 
 .fc .fc-timegrid-slot-label-cushion {
-    font-size: 1rem;
-    font-weight: 800;
+    font-size: .85rem;
+    font-weight: 400;
+    padding: 0 1rem;
     &:after{
         content: "h00";
     }
