--- a/project/public/styles/calendar.css
+++ b/project/public/styles/calendar.css
@@ -284,13 +284,14 @@ body {
     justify-content: center;
     align-items: center;
     background: var(--bg-primary);
-    margin: 3rem;
+    margin: 0 3rem;
     box-shadow: 2px 10px 30px rgba(0, 0, 0, 0.2);
     border-radius: 25px;
     padding: 3rem;
 }
 #calendar {
-    min-width: 800px;
+    min-width: 400px;
+    width: 1000px;
 }
 
 .fc-theme-standard td, .fc-theme-standard th, .fc-theme-standard .fc-scrollgrid {
@@ -316,6 +317,10 @@ body {
     &:after{
         content: "h00";
     }
+}
+
+.fc .fc-timegrid-slot {
+    height: 3rem;
 }
 
 .fc .fc-scroller-liquid-absolute::-webkit-scrollbar {
@@ -347,10 +352,11 @@ body {
 
 .fc .fc-toolbar-title {
     font-size: .95rem;
+    color: #b6afaf;
 }
 
 .fc .fc-button {
-    border: 1px solid transparent;
+    border: transparent;
     display: inline-block;
     font-size: .9rem;
     font-weight: 700;
@@ -409,6 +415,60 @@ body {
     border-color: transparent;
     box-shadow: var(--color-items-second) -39.5px 0 inset;
 }
+
+.fc .fc-today-button:hover {
+    background: var(--color-items-second);
+    border: transparent;
+}
+
+.fc .fc-col-header-cell {
+  color: #b6afaf;                /* texto preto */
+  font-weight: 400;
+  border-radius: 4px;
+}
+
+.fc .fc-col-header-cell.fc-day-today {
+  background-color: var(--color-items-second);  /* amarelinho */
+  color: var(--text-light);
+  font-weight: bold;
+  border-radius: 4px;
+}
+
+.fc .fc-daygrid-day.fc-day-today,
+.fc .fc-timegrid-col.fc-day-today {
+  background-color: transparent !important;
+}
+
+.fc .button-swipe {
+    cursor: pointer;
+    position: relative;
+    background: var(--bg-cont);
+    width: 3.2rem;
+    height: 1.4rem;
+    border-radius: 20px;
+    transition: .2s;
+}
+
+.fc .button-swipe span {
+    position: absolute;
+    top: 50%;
+    left: 2px;
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    background: var(--accent);
+    transform: translate(0,-50%);
+    transition: .2s ease-in-out;
+}
+
+.fc .button-swipe.active {
+    background: var(--color-items-second);
+}
+
+.fc .button-swipe.active span {
+    left: 48.2px;
+    transform: translate(-100%,-50%);
+}
 /*********************************************/
 
 .sidebar-calendar {
@@ -419,7 +479,7 @@ body {
 }
 
 .header-calendar {
-    height: 100%;
+    height: 72px;
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -451,10 +511,30 @@ body {
 }
 
 .routines-container {
-    height: 323px;
-    width: 250px;
+    height: 573px;
+    width: 100%;
     border-top: 2px solid var(--color-items-primary);
+    overflow: hidden auto;
+    padding: 1.5rem;
+}
 
+.routine {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    background-color: #FFE1E0;
+    box-shadow: 0px 10px 0px #F49BAB;
+    border-radius: 10px;
+    padding: 24px;
+    margin-bottom: 2rem;
+}
 
-    background: green;
+.semanas span {
+    cursor: pointer;
+    border-radius: 5px;
+    background: #F49BAB;
+    width: 10px;
+    height: 10px;
+    font-size: 15px;
+    padding: 2px .75rem;
 }
